--- a/programming/javascript/user-guide/README-v8.2.5.html
+++ b/programming/javascript/user-guide/README-v8.2.5.html
@@ -108,7 +108,7 @@
       </ul>
       <p>You can also:</p>
       <ul>
-        <li><a href="https://dynamsoft.github.io/dbr-browser-samples/index.html" rel="nofollow">Try All Online
+        <li><a href="https://demo.dynamsoft.com/Samples/DBR/JS/index.html" rel="nofollow">Try All Online
             Examples</a></li>
         <li><a href="https://demo.dynamsoft.com/barcode-reader-js/" rel="nofollow">Try the Official Demo</a></li>
       </ul>
@@ -238,7 +238,7 @@
           </svg></a>Step Two: Test the example</h3>
       <p>You can choose one of three ways to test the example:</p>
       <ul>
-        <li><a href="https://dynamsoft.github.io/dbr-browser-samples/1.hello-world/1.minimum-code.html"
+        <li><a href="https://demo.dynamsoft.com/Samples/DBR/JS/1.hello-world/1.minimum-code.html"
             rel="nofollow">Hello World example via GitHub Pages</a></li>
         <li><a href="https://jsfiddle.net/DynamsoftTeam/pL4e7yrd/" rel="nofollow">Hello World example via JSFiddle</a>
         </li>
@@ -922,7 +922,7 @@ await barcodeScanner.updateRuntimeSettings(settings);
             </div>
           </div>
           <p>Try in <a href="https://jsfiddle.net/DynamsoftTeam/f24h8c1m/" rel="nofollow">JSFiddle</a>.</p>
-          <p>See also <a href="https://dynamsoft.github.io/dbr-browser-samples/3.settings/index.html"
+          <p>See also <a href="https://demo.dynamsoft.com/Samples/DBR/JS/3.settings/index.html"
               rel="nofollow">settings samples on GitHub</a>.</p>
         </li>
       </ul>
@@ -1177,7 +1177,7 @@ document.getElementsByClassName('dbrScanner-btn-close')[0].hidden = true; // Hid
           </ul>
         </li>
       </ul>
-      <p>See also <a href="https://dynamsoft.github.io/dbr-browser-samples/2.ui-tweaking/index.html" rel="nofollow">UI
+      <p>See also <a href="https://demo.dynamsoft.com/Samples/DBR/JS/2.ui-tweaking/index.html" rel="nofollow">UI
           customization samples on GitHub</a>.</p>
       <p>Interested to test it further? Read on to learn how to request a 30-day free trial.</p>
       <h2><a id="requesting-a-trial" class="anchor" aria-hidden="true" href="#requesting-a-trial"><svg
